--- a/statics/index.css
+++ b/statics/index.css
@@ -1,5 +1,5 @@
 .title {
-    font-size: 40px;
+    font-size: 30px;
     text-align: center;
 }
 .search-box {
@@ -7,7 +7,7 @@
     max-width: 1000px;
     /* display: flex; */
     margin: 0 auto;
-    margin-top: 14px;
+    margin-top: 10px;
     height: 42px;
 }
 .songlist {
@@ -31,27 +31,37 @@
   line-height: 32px;
   padding-left: 10px;
 } */
-.list {
+#myPlayer ul {
+    padding: 0 0 0 10px;
+}
+#myPlayer ul li {  
+    list-style-type: none;
+}
+.search-list ul {
   max-width: 1000px;
   width: 100%;
   height: auto;
   padding: 0;
   margin: 10px auto;
-  font-size: 24px;
+  /* font-size: 24px; */
 }
-.list li {
+.search-list li {
   /* width: 100%; */
-  word-break:keep-all;
+  word-break: keep-all;
   overflow: hidden;
   white-space: nowrap;
   list-style-type:none;
-  height: 36px;
-  line-height: 36px;
+  /* height: 30px;
+  line-height: 30px; */
   padding-left: 10px;
-} 
-.list li:hover {
+}
+.search-list li:hover {
   background-color: #ccc;
   cursor: pointer;
+}
+.search-list span {
+    color: red;
+    /* float: right; */
 }
 .name-input {
     /* flex: 2; */
@@ -62,41 +72,41 @@
     border: none;
     border-bottom: 2px solid #777;
     border-radius: 0;
-    height: 30px;
-    line-height: 30px;
+    height: 26px;
+    line-height: 26px;
     outline: none;
-    font-size: 26px;
+    /* font-size: 26px; */
     text-align: center;
 }
 
 .submit {
     width: 25%;
     float: right;
-  
+
     /* flex: 1; */
     /* margin-left: 10px; */
-    height: 30px;
-    line-height: 30px;
-    font-size: 26px;
+    height: 26px;
+    line-height: 26px;
+    /* font-size: 26px; */
     border: 2px solid #000;
     border-radius: 5px;
     text-align: center;
 }
 .play-info {
-    font-size: 24px;
+    /* font-size: 24px; */
     color: #666;
     text-align: center;
     margin: 0;
-    
+
 }
 .tip {
-    font-size: 24px;
+    /* font-size: 24px; */
     text-align: center;
     color: #666;
-    margin: 10px 0;
+    margin: 0;
 }
 audio {
-    opacity: 0;
+    opacity: 1;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
